--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "next": "14.2.21",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "next": "^14.2.35",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "@supabase/supabase-js": "^2.39.0",
     "stripe": "^14.10.0",
     "phaser": "^3.70.0",
